Updated spanish tranlation. Merged Spanish translation from Ismael with
2003-12-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>

	* es.po: Updated spanish tranlation. Merged Spanish translation
		 from Ismael with compendia.

svn path=/trunk/; revision=1727

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Merged translation from Ismael and some 
+	         correctios from compendia
+
 2003-12-22  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
