--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-23  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2003-12-23  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Merged translation from Ismael and some 
